--- a/f.properties
+++ b/f.properties
@@ -1,1 +1,10 @@
-key=value
+  byTheFollowingAdministrator= by the following administrator: {0}
+  artifactChangeNotification.Ownership=the request for notification of any change to a {0} you own.
+  firstLastName={0} {1}
+  user.confirm.delete=Are you sure you want to delete {0}?\\n\\nTHERE IS NO UNDO for deleting Users.
+  user.editor.save.error=<strong>The User could not be saved.</strong><br/>\
+  Please correct the errors identified below and click one of the "Save" buttons.<br/>
+  #
+  # bind and validation errors
+  #
+  User.invalidValueError.name=User Name must be a valid email address.
