--- a/f.properties
+++ b/f.properties
@@ -1,4 +1,4 @@
-  byTheFollowingAdministrator= Name: John Smith, Jr., Age: 30, City: New York, N.Y.: {0}
+  #byTheFollowingAdministrator= Name: John Smith, Jr., Age: 30, City: New York, N.Y.: {0}
   artifactChangeNotification.Ownership="Hello "World"", 'It''s a test', < > & |
   firstLastName={0} {1}
   test=First line\r\nSecond line\nThird line\rFourth line
