--- a/f.properties
+++ b/f.properties
@@ -1,3 +1,4 @@
+ttt=&quot &quot; `~ёЁ !@#$%!"№;%%:?*()%^&*()
 byTheFollowingAdministrator= Name: John Smith, Jr., Age: 30, City: New York, N.Y.: {0}
 artifactChangeNotification.Ownership="Hello "World"", 'It''s a test', < > & |
 firstLastName={0} {1}
